--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.20
+streamlit==1.33.0
 tensorflow==2.10.0
-pillow
 numpy
-opencv-python
-playsound==1.2.2
+Pillow
+streamlit-drawable-canvas
